# distributed-assignment

./: CMakeLists.txt
core/: CMakeLists.txt
core/container/: VectorMap.h
core/data_utility/: DataPrinter.h  DataProfile.h  Serializer.h
core/distributed_assignment/: AssignmentData.h  DistributedAssignmentManager.h  DistributedContractorManager.h  DistributedKey.h  DistributedKeyIssuer.h  DummyContractor.h
core/mpi_communicator/: MpiLocation.h
doc/: Doxyfile
simple_serializer/: DataProfiler.h  char.cpp  main.cpp  main_serializer.cpp  make.sh  my_data.h  serializer.h  try.cpp
src/: Contractor.h  ContractorMpiResidency.h  DistributedAssignmentDataCommunicator.h  DistributedAssignmentDataContainer.h  DistributedContractorContainer.h  MpiCommunicator.h  MpiLocation.h
src/communicator/: MpiCommunicator.h  MpiLocation.h
src/data_utility/: DataPrinter.h  DataProfile.h  Serializer.h  TypeId.h
src/distributed_assignment/: Assignment.h  AssignmentData.h  AssignmentManager.h  Contractor.h  DistributedAssignmentDataCommunicator.h  DistributedAssignmentDataContainer.h  DistributedAssignmentManager.h  DistributedContractorContainer.h  DistributedContractorManager.h  DistributedKey.h  DistributedKeyIssuer.h  DummyContractor.h  SimpleKey.h  SimpleKeyIssuer.h  main.cpp
src/mpi_communicator/: MpiCommunicator.h  MpiLocation.h
src/simple_serializer/: DataPrinter.h  DataProfile.cpp  DataProfile.h  Serializer.h  TypeId.h
src/test/: make.sh  my_data.h  test_send_serializer_buffer.cpp
test/: CMakeLists.txt
test/data_type/: my_data.h
test/distributed_assignment/: CMakeLists.txt  make.sh  my_contractor.h  ping_pong_player.h  test_distributed_assignment.cpp  test_distributed_assignment_even_loading.cpp  test_distributed_assignment_ping_pong.cpp  test_distributed_contractor.cpp  test_distributed_contractor_container.cpp
test/mpi_communicator/: make.sh  my_data.h  (+3 more)
(+10 files in other folders)
